[gd_scene load_steps=15 format=3 uid="uid://b25ooshew3q2v"]

[ext_resource type="Script" path="res://player/character_controller.gd" id="1_mlc4j"]
[ext_resource type="AudioStream" uid="uid://brpy0oq2perul" path="res://player/footsteps/concrete/Concrete footstep 1.wav" id="2_jwcu0"]
[ext_resource type="AudioStream" uid="uid://bpeqpaaaf327i" path="res://player/footsteps/concrete/Concrete footstep 2.wav" id="3_nygiy"]
[ext_resource type="AudioStream" uid="uid://bh1bbwj8h13hl" path="res://player/footsteps/concrete/Concrete footstep 3.wav" id="4_hcqhq"]
[ext_resource type="AudioStream" uid="uid://cwbow2m6k0sj2" path="res://player/footsteps/concrete/Concrete footstep 4.wav" id="5_v410j"]
[ext_resource type="AudioStream" uid="uid://dn7dvyteu161k" path="res://player/footsteps/concrete/Concrete footstep 5.wav" id="6_4uoq0"]
[ext_resource type="AudioStream" uid="uid://smop64i8dipc" path="res://player/footsteps/concrete/Concrete footstep 6.wav" id="7_pybik"]
[ext_resource type="AudioStream" uid="uid://cjteew8k01rko" path="res://player/footsteps/concrete/Concrete footstep 7.wav" id="8_iq7hm"]
[ext_resource type="AudioStream" uid="uid://cndffhdbogvvl" path="res://player/footsteps/concrete/Concrete footstep 8.wav" id="9_36wfv"]
[ext_resource type="AudioStream" uid="uid://cacinnac6pw3l" path="res://player/footsteps/concrete/Concrete footstep 9.wav" id="10_w6k87"]
[ext_resource type="AudioStream" uid="uid://ko8n21padphb" path="res://player/footsteps/concrete/Concrete footstep 10.wav" id="11_jghtd"]
[ext_resource type="Script" path="res://player/footsteps/footsteps.gd" id="12_hbpo8"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_3ceiv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8swph"]
radius = 0.4
height = 1.75

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("dialogue_audio_player", "ray_cast") groups=["Player"]]
collision_layer = 2
script = ExtResource("1_mlc4j")
dialogue_audio_player = NodePath("PlayerDialogueASP")
ray_cast = NodePath("HeadNode/Camera3D/RayCast3D")
ray_distance = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
cast_shadow = 0
mesh = SubResource("CapsuleMesh_3ceiv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
shape = SubResource("CapsuleShape3D_8swph")

[node name="HeadNode" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="HeadNode"]
cull_mask = 1047551

[node name="RayCast3D" type="RayCast3D" parent="HeadNode/Camera3D"]

[node name="CameraMatchPosition" type="Node3D" parent="HeadNode"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="InspectPosition" type="Node3D" parent="HeadNode"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="FootstepPlayer" type="AudioStreamPlayer3D" parent="."]
attenuation_model = 3
volume_db = -30.0
script = ExtResource("12_hbpo8")
default_footstep_sound_effects = Array[AudioStream]([ExtResource("2_jwcu0"), ExtResource("3_nygiy"), ExtResource("4_hcqhq"), ExtResource("5_v410j"), ExtResource("6_4uoq0"), ExtResource("7_pybik"), ExtResource("8_iq7hm"), ExtResource("9_36wfv"), ExtResource("10_w6k87"), ExtResource("11_jghtd")])

[node name="PlayerDialogueASP" type="AudioStreamPlayer3D" parent="."]
